# terragear

./: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  NEWS  PATCH-nurbs++-3.0.11-with-gcc-3.4.x  README  README.cygwin  README.gpc  README.gts  README.howto  README.newmat  README.nurbs++  TODO.txt  TerraGear.dsp  TerraGear.dsw  acconfig.h  acinclude.m4  am2dsp.pl  autogen.sh  config.cache  config.status  configure  configure.ac  configure.in  detect.c  doxygen-src.conf  scenery_version.hxx
src/Airports/GenAirports/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  apt_surface.cxx  apt_surface.hxx  build.cxx  build.hxx  convex_hull.cxx  convex_hull.hxx  elevations.cxx  elevations.hxx  global.hxx  lights.cxx  lights.hxx  main.cxx  output.cxx  output.hxx  point2d.cxx  point2d.hxx  poly_extra.cxx  poly_extra.hxx  process.pl  process.sh  runway.cxx  runway.hxx  rwy_common.cxx  rwy_common.hxx  rwy_nonprec.cxx  rwy_nonprec.hxx  rwy_prec.cxx  rwy_prec.hxx  rwy_simple.cxx  rwy_simple.hxx  rwy_visual.cxx  rwy_visual.hxx  taxiway.cxx  taxiway.hxx  testnurbs.cxx  texparams.hxx
src/Airports/GenAirports850/: .gitignore  CMakeLists.txt  airport.cxx  airport.hxx  airport_base.cxx  airport_features.cxx  airport_lights.cxx  apt_math.cxx  apt_math.hxx  apt_surface.cxx  apt_surface.hxx  beznode.hxx  build.cxx  build.hxx  closedpoly.cxx  closedpoly.hxx  convex_hull.cxx  convex_hull.hxx  debug.cxx  debug.hxx  elevations.cxx  elevations.hxx  genapts.sh  global.hxx  heli_gen.cxx  heli_gen.hxx  helipad.cxx  helipad.hxx  lights.cxx  lights.hxx  linearfeature.cxx  linearfeature.hxx  linked_objects.cxx  linked_objects.hxx  main.cxx  object.cxx  object.hxx  output.cxx  output.hxx  parser.cxx  (+20 more)
src/BuildTiles/Clipper/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  clipper.cxx  clipper.hxx  default_priorities.txt  priorities.cxx  priorities.hxx  testclipper.cxx
src/BuildTiles/Main/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  README  cliptst.cxx  construct.cxx  construct.hxx  construct.sh  default_priorities.txt  main.cxx  master.cxx  priorities.cxx  priorities.hxx  tgconstruct.cxx  tgconstruct.hxx  tgconstruct_cleanup.cxx  tgconstruct_clip.cxx  tgconstruct_debug.cxx  tgconstruct_elevation.cxx  tgconstruct_landclass.cxx  tgconstruct_lookup.cxx  tgconstruct_math.cxx  tgconstruct_mesh.cxx  tgconstruct_mesh.hxx  tgconstruct_output.cxx  tgconstruct_poly.cxx  tgconstruct_shared.cxx  tgconstruct_stage1.cxx  tgconstruct_stage1.hxx  tgconstruct_stage2.cxx  tgconstruct_stage2.hxx  tgconstruct_stage3.cxx  tgconstruct_stage3.hxx  tgconstruct_tesselate.cxx  tgconstruct_texture.cxx  tglandclass.cxx  tglandclass.hxx  tgshape.cxx  tgshape.hxx  (+3 more)
src/BuildTiles/Parallel/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  client.cxx  fgfs-launch-clients  fgfs-launch-server  genworklist.sh  server.cxx  tg-launch-clients  tg-launch-server
src/BuildTiles/cgal_tests/: CMakeLists.txt  arr_test.txt  arrtest.cxx  cliptest.cxx  extended_kernel.cxx  jointest.cxx  print_utils.h  tri_test.txt  tritest.cxx
src/BuildTiles/tglod/: .gitignore  CMakeLists.txt  main.cxx  tg_btg_mesh.cxx  tg_btg_mesh.hxx  tg_btg_mesh_simplify.cxx  tg_geometry_arrays.hxx
src/Lib/: .gitignore  CMakeLists.txt  Makefile.am
src/Lib/Array/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  array.cxx  array.hxx  rectify_height.cxx  testarray.cxx  testgts.cxx
src/Lib/DEM/: CMakeLists.txt  Makefile.am  dem.cxx  dem.hxx
src/Lib/Geometry/: CMakeLists.txt  Makefile.am  contour_tree.cxx  contour_tree.hxx  line.cxx  line.hxx  point3d.hxx  poly_cgal.cxx  poly_extra.cxx  poly_extra.hxx  poly_support.cxx  poly_support.hxx  rectangle.cxx  rectangle.hxx  tg_nodes.cxx  tg_nodes.hxx  trieles.hxx  trinodes.cxx  trinodes.hxx  trisegs.cxx  trisegs.hxx  util.cxx  util.hxx
src/Lib/HGT/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  draw_picture.pl  dted.cxx  dted.hxx  hgt.cxx  hgt.hxx  srtmbase.cxx  srtmbase.hxx  testhgt.cxx
src/Lib/Optimize/: CMakeLists.txt  Makefile.am  genfans.cxx  genfans.hxx  genstrips.cxx  genstrips.hxx
src/Lib/Output/: CMakeLists.txt  Makefile.am  output.cxx  output.hxx
src/Lib/Polygon/: CMakeLists.txt  Makefile.am  chop-bin.cxx  chop.hxx  clipper.cpp  index.cxx  index.hxx  names.cxx  names.hxx  point2d.hxx  polygon.cxx  polygon.hxx  rectangle.cxx  rectangle.hxx  simple_clip.cxx  simple_clip.hxx  split-bin.cxx  split.cxx  split.hxx  superpoly.cxx  superpoly.hxx  surface.cxx  surface.hxx  texparams.cxx  texparams.hxx  tg_nodes.hxx  tg_unique_geod.hxx  tg_unique_tgnode.hxx  tg_unique_vec2f.hxx  tg_unique_vec3d.hxx  tg_unique_vec3f.hxx  trinodes.cxx  trinodes.hxx
src/Lib/TriangleJRS/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  test_triangle.c  tri_support.c  tri_support.h  triangle.c  triangle.h
src/Lib/Win32/: mkdir.cpp  mkdir.hpp
src/Lib/e00/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  e00.cxx  e00.hxx  teste00.cxx
src/Lib/landcover/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  README  landcover.cxx  landcover.hxx  test-landcover.cxx
src/Lib/poly2tri/: CMakeLists.txt  Makefile.am  README  construct.c  data_1  interface.h  misc.c  monotone.c  tri.c
src/Lib/shapelib/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  dbfadd.c  dbfcreate.c  dbfdump.c  dbfopen.c  shape.errata  shapefil.h  shpadd.c  shpcreate.c  shpdump.c  shpopen.c  shptest.c  shputils.c
src/Lib/terragear/: BucketBox.hxx  CMakeLists.txt  clipper.cpp  clipper.hpp  tg_accumulator.cxx  tg_accumulator.hxx  tg_areas.cxx  tg_areas.hxx  tg_arrangement.cxx  tg_arrangement.hxx  tg_array.cxx  tg_array.hxx  tg_cgal.cxx  tg_cgal.hxx  tg_cgal_epec.hxx  tg_chopper.cxx  tg_chopper.hxx  tg_cluster.cxx  tg_cluster.hxx  tg_constraint.hxx  tg_contour.cxx  tg_contour.hxx  tg_dataset_protect.hxx  tg_euclidean.hxx  tg_graph.cxx  tg_graph.hxx  tg_intersection_edge.cxx  tg_intersection_edge.hxx  tg_intersection_generator.cxx  tg_intersection_generator.hxx  tg_intersection_node.cxx  tg_intersection_node.hxx  (+30 more)
src/Prep/: .gitignore  CMakeLists.txt  Makefile.am
src/Tests/: CMakeLists.txt  polydecode.sh  tgChopperTest.cxx
(+461 files in other folders)
